--- a/plenaries/earth.html
+++ b/plenaries/earth.html
@@ -74,12 +74,12 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>The Global Food Crisis</h1>
+						<h1>The Plight of Workers’ Rights</h1>
 						<img class="img-fluid plenary-img" src="../img/plen/earth.png" alt="The Global Food Crisis picture"/>
 						<p class="card-text">
-							<p>Humankind is growing, and we have a big problem. By the year 2050, the global population is expected to surpass 9 million people, with the majority being born in what are developing nations today.  Research by The United States Department of Agriculture shows that the number of food insecure (hungry) people in sub-Saharan Africa will rise by a third and that in order to meet the demands of an exponentially growing population, the world’s collective agriculture production will have to rise approximately 70%. At a time where crop yields and natural resources are rapidly diminishing due to new diseases, urbanization and soil erosion caused by global warming weather phenomena, this task seems insurmountable. The underlying crisis has the potential not only to stunt the growth of humanity, but to cause hundreds of thousands, and possibly millions of people to starve death… Questions of how we will feed future generations? are ones that are worrying the global community. “The global food crisis” plenary will engage in an in depth discussion about how the world can effectively approach these issues. With a range of diverse opinions from very informed speakers who are experts in the issue, we will be examining  solutions from implementing more sustainable agriculture and environmental policy to governments issuing restrictions on reproductive rights in order to curtail population control.</p>
+							<p>The Plight of Workers’ Rights is a plenary that generally focuses on democracy and its core values within the workplace. Essentially, this involves the powers and rights of workers when faced against large corporate employers. The name, itself, symbolizes and is representative of the ebb in workers’ rights with regards to these large corporations today. It also explicates the fact that many workers are victim to current prevalent issues within the work environment, and how some companies refuse to acknowledge or change policies as a result of this. Finally, the plenary relates toward the future based on the theme, 2020 Vision, and looks to provide an analysis of what democracy in the workplace will presumably look like over the next decade due to the inevitable development of technologies worldwide.
+                        </p>
 
-						</p>
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
@@ -90,20 +90,11 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jsumner.png" alt="Dr. Jennifer Sumner">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sblau.png" alt="Dr. Jennifer Sumner">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Jennifer Sumner</h2>
-						In an exponentially expanding world, will we be able to provide enough food and resources for future generations? Dr Jennifer Sumner believes, we can. This year at WAC she will be co-leading “The Global Food Crisis” plenary and helping us to understand how in an increasingly expanding and globalizing world, what methods and policies governments and the agricultural community can put in place to help the next generations survive. Dr. Jennifer Sumner is currently a professor and lecturer in the department for Higher Education and Leadership at the Ontario Institute for Studies in Education at the University of Toronto. She received a bachelor's degree at the University of Toronto and went on to earn a diploma in agriculture and a PHD in rural studies both from the University of Guelph. Since then she has researched or taught in an astounding eight separate subjects at University of Toronto. She is an expert in the fields Sustainability, Food and sustainable food systems, Organic agriculture, Globalization, Rural communities/rural women and the civil commons and the social economy all of which pertain to important issues facing society and to this year’s theme of “Paradigm shifts”. Since 2005 she has written and co-edited four novels discussing environmental and agricultural sustainability policy, in addition she has received seven research grants for her work in sustainable food systems and how organic agriculture affects the rural economy.
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/pdesrochers.jpg" alt="Dr. Pierre Doesrochers">
-					</div>
-					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Pierre Doesrochers</h2>
-						Pierre Desrochers, PhD is an Associate Professor of Geography at the University of Toronto Mississauga, specializing in economic development, technological innovation, Food History and Policy, and international trade among many others. Desrochers the co-author of the book 'The Locavore's Dilemma', published in 2012. The book highlights the use of international trade to promote sustainability, by opening trade routes and eating globally we can all work together to create a more sustainable planet. Desrochers was also the 2017 recipient of the Julian L. Simon Memorial Award that is given to an individual whose work promotes the vision of man as the ultimate resource.
+						<h2 class="text-center text-md-left">Shawna Bader Blau</h2>
+						Dr. Jennifer Sumner is currently a professor and lecturer in the department for Higher Education and Leadership at the Ontario Institute for Studies in Education at the University of Toronto. She received a bachelor's degree at the University of Toronto and went on to earn a diploma in agriculture and a PHD in rural studies both from the University of Guelph. Since then she has researched or taught in an astounding eight separate subjects at University of Toronto. She is an expert in the fields Sustainability, Food and sustainable food systems, Organic agriculture, Globalization, Rural communities/rural women and the civil commons and the social economy all of which pertain to important issues facing society and to this year’s theme of “Paradigm shifts”. Since 2005 she has written and co-edited four novels discussing environmental and agricultural sustainability policy, in addition she has received seven research grants for her work in sustainable food systems and how organic agriculture affects the rural economy.
 					</div>
 				</div>
 			</div>
