--- a/plenaries/feminism.html
+++ b/plenaries/feminism.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>The Changing Face of Feminism | The World Affairs Conference</title>
-  <meta name="description" content="Feminism often presents itself under a variety of forms along with different political movements, ideologies, and current social movements. Although feminism...">
+  <title>Reconciliation and Indigenization | The World Affairs Conference</title>
+  <meta name="description" content="Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, ban...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -74,10 +74,14 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>The Changing Face of Feminism</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/feminism.png" alt="The Changing Face of Feminism picture"/>
+						<h1>Reconciliation and Indigenization</h1>
+						<img class="img-fluid plenary-img" src="../img/plen/crypto.svg" alt="Data Daycare"/>
 						<p class="card-text">
-							<p>Feminism often presents itself under a variety of forms along with different political movements, ideologies, and current social movements. Although feminism continues to change its shape and form due to various factors, its central theme is always and will always be around gender equality. In the 20th century, three different waves of feminism emerged with the shared purpose of seeking for gender equality. The first wave of feminism happened in the late-19th century and early 20th century. This incredible phenomenon brought about a plethora of changes in many societies, noticeably the Women’s suffrage. By the mid 20th century, the second wave of feminism focused on economic and social inequalities between genders. Feminists saw problems such as glass ceiling, wage gap in business and sexual harassment and tried to tackle them. One of their major success was the institution of the sexual harassment laws which aimed to protect women from sexual assaults. The third wave of feminism is a recent and ongoing one. It acts as a response to the some of the perceived failures of the second wave. It avoids what the second wave deems as the essentialist definition of femininity, which focuses too much on upper-middle-class women’s rights. Instead, the third wave acknowledges diversity within the feminist community and embraces a variety of different feminisms. We are not able to predict what the future of feminism will bring nor how it will differ from previous waves. However, learning about its fascinating evolution will surely help us gain an insight into its future.</p>
+							<p>The plenary of Reconciliation and Indigenization is meant to discuss about conflict left with Indigenous peoples over from the past of Canada’s colonial history. It should be recognized and accepted the reality of Canadian history, accepted how that history paralyzed Indigenous Peoples, and how it continues to subjugate Indigenous Peoples. Furthermore, the plenary will show a mass discussion on reconciliation and the future of it within the upcoming decade.
+            </p>
+
+          <p>But there are some questions we must ask, too. What is the role of Canadian society in Truth and Reconciliation? How have attitudes about the Indigenous changed since the abolishment of residential schools? What is the future relationship between the government of Canada and Indigenous communities in decade?
+          Our plenary prepares our generation - the first generation that will be fully immersed in this technology - for what we need to know to be prepared for the exponential increase of cryptocurrencies in the years to come.</p>
 
 						</p>
 						<p class="card-text">
@@ -90,20 +94,20 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ccodsi.png" alt="Caroline Codsi">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jbrant.png" alt="Jennifer Brant">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Caroline Codsi</h2>
-						A passionate and strategic leader, Caroline has had a successful career in the corporate world of over 25 years including the past decade in VP and SVP roles within major organizations. Caroline founded Women in Governance in 2010, a non-for-profit organization with the mission to encourage women to develop their leadership, advance their career and sit on boards. She dedicates her life to all matters relating to the access of women to executive roles and board positions in the corporate world in Canada as well as gender equality, everywhere in the world. A highly sought-after speaker, Caroline is a multi-award winner including from the Quebec Business Women Network, the Arab Women Trophy, Premières en Affaires among others. She was recognized as a Top 20 Diversity Leading Figures in Quebec, Top 75 Canadian Immigrants and Top 100 Most Powerful Women in Canada. She is also the recipient of a Gender Equality Award by the United Nations Women National Committee as well as a Mercure Leadership Award from the Quebec Chambers of Commerce Federation.
+						<h2 class="text-center text-md-left">Jennifer Brant</h2>
+						Dr. Brant belongs to the Mohawk Nation with family ties to Six Nations of the Grand River Territory and Tyendinaga Mohawk Territory. She finished her PhD at Brock University and is currently an Assistant Professor at the Ontario Institute for Studies in Education, University of Toronto. Her work positions Indigenous literatures as educational tools to inspire empathy, compassion, healing, and wellness. Dr. Brant is also the co-editor of “Forever Loved: Exposing the Hidden Crisis of Missing and Murdered Indigenous Women and Girls in Canada”. Through her community work, teaching, research, and writing, she is dedicated to encouraging teacher candidates to engage in the Truth and Reconciliation Commission of canada’s Calls to Actions.  She is the 2018 recipient of the Canadian Society for the Study of Higher Education “George L. Geis Dissertation Award” as well. 
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/kdogra.jpg" alt="Kavita Dogra">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jdupuis.png" alt="Florian Kerschbaum">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Kavita Dogra</h2>
-						Kavita Dogra is the founder of We Talk Women, a humble organization working to raise awareness about girls’ and women’s rights issues. Through the organization, she hosts film and documentary screenings that work to expose the injustices being experienced by women in Canada and around the world. Kavita co-chaired the committee that organized the Women’s March in Toronto and is an active volunteer. Kavita believes that everyone needs to do their part in making the world a better place and hopes to inspire people to take meaningful action in their communities.
+						<h2 class="text-center text-md-left">Jenny Kay Dupuis</h2>
+						Born in Northern Ontario as a member of the Nipissing First Nation, Dr. Jenny Kay Dupuis is an educator, author, artist, and a consultant on Indigenous Issues. Her areas of work are namely leadership and diversity, as well as the importance of relationship building today. In 2016, she co-wrote her first children’s picture book titled I Am Not a Number which was about the struggles and traumas her Grandmother went through in a residential school. The book ultimately became one of the finalists for the 2017 Canadian Children’s Book Centre Awards. She was also awarded the 2017 J.S. Woodsworth Individual Leadership Award for Human Rights and Equity.
 					</div>
 				</div>
 			</div>
@@ -120,7 +124,7 @@
       The World Affairs Conference website, made by the WAC team with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
     </p>
     <p>
-      Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/in" style="text-decoration:underline;">get in touch with us!</a>
+      Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
     </p>
     <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
     <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
