Main Index Changes

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
 </nav>
 
 
-    <div class="container">
+    <!--<div class="container">
       <div class="alert alert-info" role="alert">
         Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-    </div>
+    </div>-->
 
       <div class="index-welcome">
   <div class="container">
     <div class="text-center text-md-left">
-      <h2>Welcome to the 2018</h2>
+      <h2>Welcome to the 2019</h2>
       <h1>World Affairs Conference</h1>
-      <h3 class="display-5">February 5th and 6th</h3>
+      <h3 class="display-5">January 30th</h3>
     </div>
     <div class="text-center">
       This Year's Theme:
-      <h1 class="display-4">Paradigm Shifts</h1>
+      <h1 class="display-4">2020 Vision</h1>
     </div>
     <div class="text-center text-md-right">
       <h4>The Conference is</h4>
@@ -102,32 +102,22 @@
           The World Affairs Conference (WAC) is Canada's oldest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America.
         </p>
         <p>
-          This year, WAC 2018's theme is <b>Paradigm Shifts</b>: how have the axioms of society changed, and how will they change in the future? Some of our programs will include discussions on new innovative technologies, the ever-changing political landscape, and shifts in social policy and movements.
+          This year, WAC 2019's theme is <b>2020 Vision</b>: .......
         </p>
-        <a class="card-link" href="/keynote/">Keynote</a>
-        <a class="card-link" href="/addresses/">Addresses</a>
-        <a class="card-link" href="/plenaries/">Plenaries</a>
-        <a class="card-link" href="/faq/">FAQ</a>
-        <a class="card-link" href="/contact/">Contact</a>
       </div>
-    </div>
-  </div>
-  <div class="card card-body mt-3">
-    <h3 class="text-center">Promotional Video: Brave New World</h3>
-    <div class="embed-container">
-      <iframe src="https://www.youtube.com/embed/gVEUOxwLgjE" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
   <div class="card card-body mt-3">
       <div class="row">
         <div class="col-sm-6">
-          <img class="img-fluid rounded" src="img/speakers/hinton.png" alt="Keynote Speaker Geoffrey Hinton"/>
+          <img class="img-fluid rounded" src="img/speakers/jhansen.jpg" alt="James Hansen"/>
         </div>
         <div class="col-sm-6">
           <h3>Featured Speaker</h3>
-          <h4>Geoffrey Hinton, Keynote Address</h4>
+          <h4>James Hansen, Keynote Address</h4>
           <p>
-            The increasing possibilities of artificial intelligence will have consequential impacts on society. Ranging from an upheaval of the job market to an increasingly computer dependent world, artificial intelligence is one of today’s most profound paradigm shifts. Geoffrey Hinton, nicknamed the “Godfather of Machine Learning”, divides his time between working for Google and the University of Toronto. His expertise will address how AI will change the society we live in now.
+            Dr. James Hansen, formerly Director of the NASA Goddard Institute for Space Studies, is Adjunct Professor at Columbia University’s Earth Institute, where he directs a program in Climate Science, Awareness and Solutions. Dr. Hansen is best known for his testimony on climate change in the 1980s that helped raise awareness of global warming. He is a member of the U.S. National Academy of Sciences and has received numerous awards including the Sophie and Blue Planet Prizes.
+
           </p>
         </div>
       </div>
@@ -136,12 +126,8 @@
 <div class="container mt-3">
   <div class="card card-body">
     <h2 class="text-center">Previously From WAC</h2>
-    <h3>Our Time</h3>
-    <p>
-      "Our Time" was a short film made for WAC 2017, emphasizing the importance of the topics of WAC 2017 and what roles students could play in solving global problems.
-    </p>
     <div class="embed-container">
-      <iframe src="https://www.youtube.com/embed/mal4ijVNtOw?rel=0" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/gVEUOxwLgjE" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="row pt-5">
       <div class="col-sm-3">
@@ -157,8 +143,8 @@
   </div>
 </div>
 <script type="text/javascript">
-/*
-  var wacdate = "2/6/2018"; //Countdown date in MM/DD/YYYY format (no 0's required)
+
+  var wacdate = "1/30/2019"; //Countdown date in MM/DD/YYYY format (no 0's required)
   function getTimeRemaining(endtime){
   	var t = Date.parse(endtime) - Date.parse(new Date());
   	var seconds = Math.floor( (t/1000) % 60 );
@@ -179,7 +165,7 @@
   window.setInterval(function(){
     $("#countdown").html(getTimeRemaining(wacdate));
   }, 1000);
-  */
+
 </script>
 
 
