--- a/addresses/index.html
+++ b/addresses/index.html
@@ -67,11 +67,11 @@
 </nav>
 
 
-    <div class="container">
-      <div class="alert alert-info" role="alert">
-        Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
-      </div>
-    </div>
+    <!--<div class="container">
+      //<div class="alert alert-info" role="alert">
+        //Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+      //</div>
+    </div>-->
 
       <div class="container">
 	<div class="card card-body mb-5">
