--- a/schedule/index.html
+++ b/schedule/index.html
@@ -67,15 +67,15 @@
 </nav>
 
 
-    <div class="container">
+    <!--<div class="container">
       <div class="alert alert-info" role="alert">
         Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-    </div>
+    </div>-->
 
       <div class="container">
   <div class="card card-body">
-    <h1 class="text-center">WAC 2018 Schedule</h1>
+    <h1 class="text-center">WAC 2019 Schedule</h1>
     <p class="text-center">(<a href="../files/schedule_2018.pdf">PDF copy</a>)</p>
     <h2 class="text-center mt-2">Keynote Address</h2>
     <div class="table-responsive">
