--- a/addresses/index.html
+++ b/addresses/index.html
@@ -68,31 +68,35 @@
 
 
     <!--<div class="container">
-      //<div class="alert alert-info" role="alert">
-        //Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
-      //</div>
+      <div class="alert alert-info" role="alert">
+        Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+      </div>
     </div>-->
 
       <div class="container">
 	<div class="card card-body mb-5">
-		<h1 class="text-center">Opening Address: The End of Protest</h1>
-		<h2 class="text-center">Micah White</h2>
-		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/mwhite.jpg" alt="Micah White"/>
-		<p>
-			Is protest broken? Micah White, co-creator of Occupy Wall Street, thinks so. Disruptive tactics have failed to halt the rise of Donald Trump. Movements ranging from Black Lives Matter to environmentalism are leaving activists frustrated. Meanwhile, recent years have witnessed the largest protests in human history. Yet these mass mobilizations no longer change society. Now activism is at a crossroads: innovation or irrelevance. Is it time to consider a paradigm shift in our approach to protest? What does the future of protest look like?
+		<h1 class="text-center">A New Home: The Future Of Migrants In The Western World</h1>
+		<h2 class="text-center">Ahmed Hussen</h2>
+		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/ahussen.jpg" alt="Ahmed Hussen"/>
+        <p>
+			The early 21st century has seen migration on an unprecedented scale since the second world war. Now, as many migrants begin to find themselves at their destinations, Western Nations find themselves with hundreds thousands of new inhabitants in their lands that they are responsible for. What does the future hold for these newly settled migrants? How will politics be affected by their presence? Should society absorb these new migrants, or should these migrants focus on preserving their own culture?
+
 		</p>
 		<p>
-			Micah White, PhD is a public intellectual and lifelong activist who co-created Occupy Wall Street, a global social movement that spread to 82 countries, while an editor of Adbusters magazine. White's first book, The End of Protest: A New Playbook for Revolution, was published in 2016 by Knopf Canada. He has been a featured guest on major network television shows such as Bill Maher’s Politically Incorrect, the BBC's Newsnight and The National. In recognition of his contributions, Esquire has named him one of the most influential young thinkers alive today. Micah is currently a Fulani Fellow at the All Stars Project in New York City where he is working with Dr. Lenora Fulani, the first woman to run for president of the United States and get on the ballot in all 50 states. He is studying the revolutionary potential of electoral social movements.
+			Ahmed Hussen is the Minister of Immigration, Refugees and Citizenship for the Government of Canada, as well as a Member of Parliament for the riding of York South-Weston. Born and raised in Somalia, Hussen immigrated to Canada in 1993 where he settled in Regent Park and quickly gravitated towards public service. Before his entry into politics, Hussen practised Immigration, Criminal, Refugee, and Human Rights Law in Toronto. He was presented with the RBC Top 25 Canadian Immigrant Award, an award that honours the achievements of immigrants who have chosen to make Canada their home. The Toronto Star named him among the 10 individuals who have made significant contributions to Toronto in various fields, including community service, business, sports and science. He has continued his work in public service through his role as Minister of Immigration by creating new policies to help welcome more immigrants and refugees to Canada.
+
 		</p>
 		<div class="pb-5">
 		</div>
-		<h1 class="text-center">Closing Address: Saving Civilization with Space Colonization </h1>
-		<h2 class="text-center">Joe Strout</h2>
-		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/jstrout.jpg" alt="Joe Strout"/>
+		<h1 class="text-center">Closing Address: ____ </h1>
+		<h2 class="text-center">Diana Tesic</h2>
+		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/dtesic.jpg" alt="Joe Strout"/>
 		<p>
-			Joe Strout’s programming career began at a young age, writing articles for "Nibble" magazine in high school. Joe obtained a bachelors in psychology from the University of Miami and a masters in neuroscience from the University of California, San Diego, but couldn't resist the call of code and became a full-time software developer after graduate school. He now runs a consulting business, crafting unique software solutions to a wide range of problems, and has worked with his two sons to create High Frontier, a space settlement simulation game that uses real physics. Joe is also a long-time member of the National Space Society and a Senior Associate of the Space Studies Institute.
+			The 2020 Tokyo Summer Olympic Games will be heavily scrutinised with regards to its doping control measures following the Russian doping scandals at the 2016 Rio Olympic Games. 
 		</p>
-		
+        <p>
+        Diana Tesic is a well practiced Sports Lawyer with experience working in sports arbitration, commercial law within the sports industry and sports investigations. Ms. Tesic received her Law degree from the University of Western Ontario in 2011, specializing in sports law. Ms. Tesic worked alongside Richard McLaren to investigate allegations of doping at the Sochi 2014 Winter Olympics for the World Anti-Doping Association and was an integral part of the publication of the McLaren Report - an investigation into the allegations of state-sponsored doping in Russia.
+        </p>
 	</div>
 </div>
 
