--- a/contact/index.html
+++ b/contact/index.html
@@ -67,11 +67,11 @@
 </nav>
 
 
-    <div class="container">
+    <!--<div class="container">
       <div class="alert alert-info" role="alert">
         Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-    </div>
+    </div>-->
 
       <div class="container">
 
