--- a/keynote/index.html
+++ b/keynote/index.html
@@ -67,36 +67,30 @@
 </nav>
 
 
-    <div class="container">
+    <!--<div class="container">
       <div class="alert alert-info" role="alert">
         Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-    </div>
+    </div>-->
 
       <div class="container">
   <div class="card">
     <div class="card-body">
-      <h1 class="text-center">Professor Geoffrey Hinton</h1>
+      <h1 class="text-center">Dr. James Hansen</h1>
       <h2 class="text-center">Lionel Gelber Keynote Speaker</h2>
-      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/hinton.png" alt="Prof. Geoffrey Hinton"/>
+      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/Jhansenspeak.jpg" alt="Dr. James Hansen"/>
       <p>
-        Geoffrey Hinton received his PhD in Artificial Intelligence from Edinburgh in 1978.  After five years as a faculty member at Carnegie-Mellon he became a fellow of the Canadian Institute for Advanced Research and moved to the Department of Computer Science at the University of Toronto where he is now an emeritus distinguished professor. He is also a distinguished researcher at Google.
-      </p>
-      <p>
-        Geoffrey Hinton was one of the researchers who introduced the backpropagation algorithm and the first to use backpropagation for learning word embeddings. His other contributions to neural network research include Boltzmann machines, distributed representations, time-delay neural nets, mixtures of experts, variational learning and deep learning.  His research group in Toronto made major breakthroughs in deep learning that revolutionized speech recognition and object classification.
-      </p>
-      <p>
-        Geoffrey Hinton is a fellow of the UK Royal Society and a foreign member of the US National Academy of Engineering and the American Academy of Arts and Sciences. His awards include the David E. Rumelhart prize, the IJCAI award for research excellence, the Killam prize for Engineering, the IEEE James Clerk Maxwell Gold medal, and the NSERC Herzberg Gold Medal which is Canada's top award in Science and Engineering.
+        Dr. James Hansen, formerly Director of the NASA Goddard Institute for Space Studies, is Adjunct Professor at Columbia University’s Earth Institute, where he directs a program in Climate Science, Awareness and Solutions. Dr. Hansen is best known for his testimony on climate change in the 1980s that helped raise awareness of global warming. He is a member of the U.S. National Academy of Sciences and has received numerous awards including the Sophie and Blue Planet Prizes. Dr. Hansen is recognized for speaking truth to power and for outlining actions needed to protect the future of young people and all species on the planet.
       </p>
     </div>
   </div>
   <div class="card-deck mt-2">
     <div class="card">
-      <img class="card-img-top img-fluid" src="../img/de-grey.jpg" alt="Picture of Dr. Aubrey de Grey">
+      <img class="card-img-top img-fluid" src="../img/speakers/hinton.jpg" alt="Geoffrey Hinton">
       <div class="card-body">
-        <h3 class="card-title">WAC 2017: Dr. Aubrey de Grey</h3>
+        <h3 class="card-title">WAC 2018: Professor Geoffrey Hinton</h3>
         <p class="card-text">
-          Dr. Aubrey de Grey is a biomedical gerontologist based in Cambridge, UK and Mountain View, California, USA, and is the Chief Science Officer of SENS Research Foundation. He is also Editor-in-Chief of Rejuvenation Research, the world’s highest-impact peer-reviewed journal focused on intervention in aging. He received his BA and Ph.D. from the University of Cambridge in 1985 and 2000 respectively. His original field was computer science, and he did research in the private sector for six years in the area of software verification before switching to biogerontology in the mid-1990s. Nowadays, Dr. de Grey is arguably the world’s foremost advocate for the pursuit of radical life extension.
+          Geoffrey Hinton was one of the researchers who introduced the backpropagation algorithm and the first to use backpropagation for learning word embeddings. His other contributions to neural network research include Boltzmann machines, distributed representations, time-delay neural nets, mixtures of experts, variational learning and deep learning. His research group in Toronto made major breakthroughs in deep learning that revolutionized speech recognition and object classification.
         </p>
       </div>
     </div>
